WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
45775
[GTK] fast/events/keydown-numpad-keys.html produces many GLib warnings
https://bugs.webkit.org/show_bug.cgi?id=45775
Summary
[GTK] fast/events/keydown-numpad-keys.html produces many GLib warnings
Martin Robinson
Reported
2010-09-14 12:58:29 PDT
Running fast/events/keydown-numpad-keys.html produces this text on stderr: gtk_text_buffer_get_insert: assertion `GTK_IS_TEXT_BUFFER (buffer)' failed gtk_text_buffer_get_iter_at_mark: assertion `GTK_IS_TEXT_MARK (mark)' failed _gtk_text_layout_get_block_cursor: assertion `layout != NULL' failed gtk_text_layout_get_cursor_locations: assertion `layout != NULL' failed gdk_window_invalidate_rect_full: assertion `GDK_IS_WINDOW (window)' failed gdk_window_invalidate_rect_full: assertion `GDK_IS_WINDOW (window)' failed gtk_text_buffer_get_insert: assertion `GTK_IS_TEXT_BUFFER (buffer)' failed gtk_text_buffer_get_iter_at_mark: assertion `GTK_IS_TEXT_MARK (mark)' failed _gtk_text_layout_get_block_cursor: assertion `layout != NULL' failed gtk_text_layout_get_cursor_locations: assertion `layout != NULL' failed gdk_window_invalidate_rect_full: assertion `GDK_IS_WINDOW (window)' failed gdk_window_invalidate_rect_full: assertion `GDK_IS_WINDOW (window)' failed gtk_text_buffer_get_insert: assertion `GTK_IS_TEXT_BUFFER (buffer)' failed gtk_text_buffer_get_iter_at_mark: assertion `GTK_IS_TEXT_MARK (mark)' failed _gtk_text_layout_get_block_cursor: assertion `layout != NULL' failed gtk_text_layout_get_cursor_locations: assertion `layout != NULL' failed gdk_window_invalidate_rect_full: assertion `GDK_IS_WINDOW (window)' failed gdk_window_invalidate_rect_full: assertion `GDK_IS_WINDOW (window)' failed gtk_text_buffer_get_insert: assertion `GTK_IS_TEXT_BUFFER (buffer)' failed gtk_text_buffer_get_iter_at_mark: assertion `GTK_IS_TEXT_MARK (mark)' failed _gtk_text_layout_get_block_cursor: assertion `layout != NULL' failed gtk_text_layout_get_cursor_locations: assertion `layout != NULL' failed gdk_window_invalidate_rect_full: assertion `GDK_IS_WINDOW (window)' failed gdk_window_invalidate_rect_full: assertion `GDK_IS_WINDOW (window)' failed
Attachments
Patch for this issue
(2.45 KB, patch)
2010-09-14 13:00 PDT
,
Martin Robinson
xan.lopez
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2010-09-14 13:00:26 PDT
Created
attachment 67593
[details]
Patch for this issue
Xan Lopez
Comment 2
2010-09-15 11:58:36 PDT
Comment on
attachment 67593
[details]
Patch for this issue OK.
Martin Robinson
Comment 3
2010-09-15 12:19:36 PDT
Committed
r67566
: <
http://trac.webkit.org/changeset/67566
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug